--- a/doc/toml/example/recipe-repo/master_bias/astroglue.toml
+++ b/doc/toml/example/recipe-repo/master_bias/astroglue.toml
@@ -24,6 +24,7 @@ input.type = "bias" # look in all raw repos, but look only for bias files
 # for early development we have support for simple absolute file paths with globs
 input.source = "path"
 input.path = "/workspaces/astroglue/images/from_astroboy/masters-raw/2025-09-09/BIAS/*.fit*"
+input.required = true # Is at least one input file required?  If true, we will skip running this stage entirely (with a warning)
 
 # make the following also work
 #
