--- a/doc/toml/example/recipe-repo/master_flat/astroglue.toml
+++ b/doc/toml/example/recipe-repo/master_flat/astroglue.toml
@@ -21,6 +21,8 @@ input.type = "flat" # look in _session_ directories, but look only for flat file
 when = "session-config" # run once per session-config
 output = "{process_dir}/flat_s{sessionid}_c{sessionconfig}.fits"
 
+context.output_base = "flat"
+
 script = '''
     # Create a sequence from the raw flat frames
     link {output_base} -out={process_dir}
