--- a/doc/toml/example/recipe-repo/master_flat/astroglue.toml
+++ b/doc/toml/example/recipe-repo/master_flat/astroglue.toml
@@ -6,10 +6,11 @@ kind = "recipe"
 [recipe]
 author.name = "FIXMESiril?"
 author.email = "FIXMESiril?"
-description = "Generate a master flat flat from raw flats"
 
 
 [[stage]]
+
+description = "Generate master flat"
 
 # For any camera
 auto.for-camera = []
