--- a/doc/toml/example/recipe-repo/osc_dual_duo/astroglue.toml
+++ b/doc/toml/example/recipe-repo/osc_dual_duo/astroglue.toml
@@ -14,7 +14,7 @@ author.email = "kevinh@geeksville.com"
 
 [[stage]]
 
-description = "Process OSC dual duo filter data, extracting Ha and Sii from the red channel"
+description = "Extract OSC dual duo filter Ha and Sii channels"
 
 # FIXME-somehow-specify-what-filternames are used to auto detect this recipe can be used?
 # figure out how to support dual duo vs single duo.  Perhaps: the FIRST recipie that matches an auto rule
@@ -46,7 +46,7 @@ script = '''
     cd {process_dir}
 
     # Calibrate the light frames using master bias and flat
-    calibrate {light_base} -bias={bias} -flat={flat} -cfa -equalize_cfa
+    calibrate {light_base} -bias={bias} -flat=flat -cfa -equalize_cfa
 
     # Remove background gradient on a per-frame basis (generates bkg_pp_{light_base}.seq)
     seqsubsky pp_{light_base} 1
@@ -58,6 +58,8 @@ script = '''
 temporaries = ["FIXME"]
 
 [[stage]]
+
+description = "Stack OSC dual duo filter data, with separate Ha, Oiii and Sii channels"
 
 tool = "python"
 when = "session-stack" # run once after all session/session-config processing was done
