--- a/doc/toml/example/recipe-repo/osc_dual_duo/astroglue.toml
+++ b/doc/toml/example/recipe-repo/osc_dual_duo/astroglue.toml
@@ -14,7 +14,7 @@ author.email = "kevinh@geeksville.com"
 
 [[stage]]
 
-description = "Extract OSC dual duo filter Ha and Sii channels"
+description = "Extract OSC dual duo filter Ha, Oiii and Sii channels"
 
 # FIXME-somehow-specify-what-filternames are used to auto detect this recipe can be used?
 # figure out how to support dual duo vs single duo.  Perhaps: the FIRST recipie that matches an auto rule
@@ -38,21 +38,22 @@ output = "FIXME"
 context.bias = '/workspaces/astroglue/images/masters/biases/2025-09-09_stacked.fits'
 
 # FIXME until auto light finding is in
-context.light_base = "/workspaces/astroglue/images/from_astroboy/M 27/2025-09-16/LIGHT"
+input.source = "path"
+input.path = "/workspaces/astroglue/images/from_astroboy/M 27/2025-09-16/LIGHT/*.fit*"
 
 script = '''
     # Create a sequence from the raw light frames, seq file goes to process_dir
-    link {light_base} -out={process_dir}
+    link light -out={process_dir}
     cd {process_dir}
 
     # Calibrate the light frames using master bias and flat
-    calibrate {light_base} -bias={bias} -flat=flat -cfa -equalize_cfa
+    calibrate light -bias={bias} -flat=flat -cfa -equalize_cfa
 
-    # Remove background gradient on a per-frame basis (generates bkg_pp_{light_base}.seq)
-    seqsubsky pp_{light_base} 1
+    # Remove background gradient on a per-frame basis (generates bkg_pp_light.seq)
+    seqsubsky pp_light 1
 
     # FIXME only do this step for duo filters (refactor to share common light processing function)
-    seqextract_HaOIII bkg_pp_{light_base} -resample=ha
+    seqextract_HaOIII bkg_pp_light -resample=ha
     '''
 
 temporaries = ["FIXME"]
