--- a/doc/toml/example/recipe-repo/master_flat/astroglue.toml
+++ b/doc/toml/example/recipe-repo/master_flat/astroglue.toml
@@ -11,6 +11,7 @@ author.email = "FIXMESiril?"
 [[stage]]
 
 description = "Generate master flat"
+disabled = true # FIXME, debugging later stuff
 
 # For any camera
 auto.for-camera = []
