--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "ms-python.python",
         "ms-python.black-formatter",
         "tamasfe.even-better-toml",
+        "github.copilot",
         // "google.geminicodeassist"
     ]
 }
