--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "multidict (>=6.7.0,<7.0.0)",
     "rich (>=14.2.0,<15.0.0)",
     "restrictedpython (>=8.1,<9.0)",
+    "astropy (>=7.1.1,<8.0.0)",
+    "tinydb (>=4.8.2,<5.0.0)",
 ]
 
 [tool.poetry]
