--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "restrictedpython (>=8.1,<9.0)",
     "astropy (>=7.1.1,<8.0.0)",
     "tinydb (>=4.8.2,<5.0.0)",
+    "platformdirs (>=4.5.0,<5.0.0)",
 ]
 
 [tool.poetry]
