--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,7 @@
     "cSpell.words": [
         "apeture",
         "ASIAIR",
-        "astroglue",
+        "starbash",
         "Oiii",
         "SEESTAR"
     ]
