--- a/src/starbash/appdefaults.sb.toml
+++ b/src/starbash/appdefaults.sb.toml
@@ -6,37 +6,37 @@ kind = "preferences"
 # FIXME, somewhere here list default patterns which can be used to identify NINA, ASIAIR, SEESTAR
 # raw repo layouts
 
-# List the initial search path to find other repos, when the app launches it always first loads this ag.toml file and this file should list all of the
+# List the initial search path to find other repos, when the app launches it always first loads this sb.toml file and this file should list all of the
 # standard default repo locations.  When searching repos, repos listed LAST have precedence, so target file can override the root processing defaults,
 # then the user prefs, then a live github URL or whatever
 
 # [[repo.ref]]
 # Possibly provide default repos via http from github?
-# url = "https://github.com/geeksville/astroglue-default-repo"
+# url = "https://github.com/geeksville/starbash-default-repo"
 
 [[repo.ref]]
 
 # Add our built-in recipes (FIXME, add a "resource" repo type for directories we expect to find inside
 # our python blob)
-dir = "/workspaces/astroglue/doc/toml/example/recipe-repo"
+dir = "/workspaces/starbash/doc/toml/example/recipe-repo"
 
 [[repo.ref]]
 
 # User custom settings live here
-# For "dir" or "url" repos we expect to find an astroglue.toml file in the root of the directory.
-# dir = "~/.config/astroglue"
+# For "dir" or "url" repos we expect to find an starbash.toml file in the root of the directory.
+# dir = "~/.config/starbash"
 # But temporarily during early development I'm keeping them in the master github
-dir = "/workspaces/astroglue/doc/toml/example/config/user/"
+dir = "/workspaces/starbash/doc/toml/example/config/user/"
 
 # [[repo.ref]]
 
-# recipe repos contain recipes (identified by name).  When any ag.toml file references
+# recipe repos contain recipes (identified by name).  When any sb.toml file references
 # a recipe the current path of all sources is searched to find that named recipe.
 
 # the standard config includes a few key recipe repos, but interested users or tool
 # vendors can define/provide their own
 
-# add a place to find FOO.ag.toml files
+# add a place to find FOO.sb.toml files
 # url = "http://fixme.com/foo-repo/somedir"
 
 # test data.  Moved to user preferences (where it should should have been all along)
