--- a/src/starbash/defaults/starbash.toml
+++ b/src/starbash/defaults/starbash.toml
@@ -10,17 +10,17 @@ kind = "preferences"
 # standard default repo locations.  When searching repos, repos listed LAST have precedence, so target file can override the root processing defaults,
 # then the user prefs, then a live github URL or whatever
 
-# [[repo.ref]]
+# [[repo-ref]]
 # Possibly provide default repos via http from github?
 # url = "https://github.com/geeksville/starbash-default-repo"
 
-[[repo.ref]]
+[[repo-ref]]
 
 # Add our built-in recipes (FIXME, add a "resource" repo type for directories we expect to find inside
 # our python blob)
 dir = "/workspaces/starbash/doc/toml/example/recipe-repo"
 
-# [[repo.ref]]
+# [[repo-ref]]
 
 # recipe repos contain recipes (identified by name).  When any sb.toml file references
 # a recipe the current path of all sources is searched to find that named recipe.
@@ -32,7 +32,7 @@ dir = "/workspaces/starbash/doc/toml/example/recipe-repo"
 # url = "http://fixme.com/foo-repo/somedir"
 
 # test data.  Moved to user preferences (where it should should have been all along)
-# [[repo.ref]]
+# [[repo-ref]]
 # dir = "~/Pictures/telescope/from_astroboy"
 
 
@@ -40,7 +40,7 @@ dir = "/workspaces/starbash/doc/toml/example/recipe-repo"
 
 
 # allow including multiple recipies FIXME old idea, not sure if needed.
-# [[repo.ref]]
+# [[repo-ref]]
 
 # looks for a file with this name and .py for the code and .toml for the config
 # we'll expect that toml file to contain various [[recipe.*]] sections which will be loaded at this
