--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ astropy = ">=7.1.1,<8.0.0"
 tinydb = ">=4.8.2,<5.0.0"
 platformdirs = ">=4.5.0,<5.0.0"
 typer = "^0.20.0"
+pandas = "^2.3.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=8.4.2,<9.0.0"
