begin adding crash reporting

--- a/src/starbash/templates/userconfig.toml
+++ b/src/starbash/templates/userconfig.toml
@@ -6,7 +6,10 @@
 [repo]
 kind = "preferences"
 
-# [preferences.author]
+[analytics]
+enabled = true
+
+# [author]
 # default author info
 # name = "Your Name"
 # email = "youremail@somedomain.com"
