--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,10 @@ pytest = ">=8.4.2,<9.0.0"
 starbash = "starbash.main:app"
 sb = "starbash.main:app"       # std alias for convenience
 
+[tool.pytest.ini_options]
+markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
+addopts = "-m 'not slow'"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
