--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,23 +26,25 @@ jobs:
           version: 2.2.1
           virtualenvs-create: true
           virtualenvs-in-project: true
+          virtualenvs-path: .venv
+          installer-parallel: true
 
-      - name: Cache Poetry cache
+      #----------------------------------------------
+      #       load cached venv if cache exists per https://github.com/marketplace/actions/install-poetry-action
+      #----------------------------------------------
+      - name: Load cached venv
+        id: cached-poetry-dependencies
         uses: actions/cache@v4
         with:
-          path: ~/.cache/pypoetry
-          key: poetry-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            poetry-${{ runner.os }}-
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
+      #----------------------------------------------
+      # install dependencies if cache does not exist
+      #----------------------------------------------
       - name: Install dependencies
-        run: |
-          poetry --version
-          poetry install --with dev --no-interaction
-
-      - name: Verify pytest is available
-        run: |
-          poetry run python -c "import pytest, sys; print('pytest', pytest.__version__)"
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --with dev
 
       - name: Run tests
         run: |
