--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    environment: ci
 
     steps:
       - name: Checkout
@@ -49,4 +50,12 @@ jobs:
       - name: Run tests
         run: |
           export SENTRY_ENVIRONMENT=ci
-          poetry run pytest
+          poetry run pytest --cov --cov-report=term --cov-report=xml
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+          fail_ci_if_error: false
+          verbose: true
