--- a/src/starbash/recipes/starbash.toml
+++ b/src/starbash/recipes/starbash.toml
@@ -7,7 +7,7 @@ dir = "master_bias"
 [[repo-ref]]
 dir = "master_flat"
 
-# Note: For automated recipe finding, it is important to list more demanding recipies first.  For instance:
+# Note: For automated recipe finding, it is important to list more demanding recipes first.  For instance:
 # osc_dual_duo (which needs a HaOiii and a SiiOiii filter) should be listed first, so that if we see
 # dataset containing both HaOiii and SiiOiii filters we will assume that is the recipe to use.
 #
