a better way of reading repo kinds

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,8 +15,8 @@
             "args": [
                 "--debug",
                 "user",
-                "analytics",
-                "on"
+                "email",
+                "kevinh@geeksville.com"
             ]
         },
         {
